# realtime_chart_example

client/: package-lock.json  package.json
client/src/: App.tsx  setupProxy.js
client/src/components/: Graph.tsx  GraphPage.tsx
server/: main.py  pyproject.toml  subscriptions.py  tickers.py
